--- a/client/src/components/card/card.scss
+++ b/client/src/components/card/card.scss
@@ -274,18 +274,16 @@
 //card rate
 .reviewCard {
   display: flex;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 20px;
-  margin: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  margin: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ccc;
+
   .avatar {
     margin-right: 20px;
     img {
       border-radius: 50%;
-      width: 50px; /* Chiều rộng avatar */
-      height: 50px; /* Chiều cao avatar */
+      width:74px; 
+      height: 74px; 
     }
   }
   .reviewContent {
@@ -295,30 +293,43 @@
       font-weight: bold;
       margin: 0;
     }
-    .rating {
-      color: gold; /* Màu vàng cho đánh giá */
-      margin: 5px 0;
-    }
-    
-    .productId {
-      font-size: 14px;
-      color: #888;
-    }
-    
-    .reviewTitle {
-      font-weight: bold;
-      margin: 5px 0;
+    .reviewContainer {
+      display: flex;
+      align-items: center; 
+      .rating {
+        margin-right: 10px; 
+        color: gold; 
+      }
+      .reviewTitle {
+        font-size: 16px;
+      }
+      
     }
     
     .reviewDate {
       font-size: 12px;
       color: #888;
+      margin-top: 5px;
     }
     
     .reviewText {
-      margin-top: 10px;
+      margin-top: 20px;
     }
-    
+    .reviewImages 
+    {
+      margin-top: 10px;
+      img {
+        width: 100px;
+        height: 100px;
+        margin-right: 10px;
+        border-radius: 5px;
+        object-fit: cover;
+      }
+    }
+  }
+  hr{
+    background-color: #ccc;
+    margin: 0;;
   }
   
 }
