--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -51,7 +51,11 @@
           font-size: 27px;
           cursor: pointer;
         }
-
+        .active {
+          color: #fcb193; 
+          font-size: 27px;
+          cursor: pointer;
+        }
         .avatar {
           width: 36px;
           height: 36px;
