--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -67,3 +67,29 @@ p,h1,h2,h3,h4,h5,h6,ul,li {
 .MuiTabs-indicator {
   background-color: var(--background--color) !important; 
 }
+.tabs {
+  display: flex;
+  margin: 20px;
+  justify-content: center;
+}
+
+.tab {
+  padding: 10px 20px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-right: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #747474;
+  background-color: white;
+  font-family: Raleway, sans-serif;
+}
+
+.tab.active {
+  background: #ff995e;
+  color: white;
+  font-weight: bold;
+
+}
